@@ -10,7 +10,7 @@ Made self parameters on const functions be const
 Got rid of excessive use of struct qualifier and added autogenerated forward declarations to compensate
 Removed unnecessary header files and made the stdbool.h include get added in a more sensible place
 Changed ImVec2/ImVec4 to be treated as by-value types and avoid new() in their constructors
-Removed hacky "orignal fully-qualified type" system and replaced it with "unmodified_element", which links all DOM elements back to a copy of the unmodified DOM
+Removed hacky "original fully-qualified type" system and replaced it with "unmodified_element", which links all DOM elements back to a copy of the unmodified DOM
 Changed stub code generation to include both the original and generated headers, and cast correctly when passing arguments around
 Added lots of namespace-related shenanigans to deal with using namespaces to separate the C and C++ headers
 Added by-value struct conversion functions
@@ -34,3 +34,4 @@ Added metadata generator
 Fixed comments getting incorrectly treated as part of the expression for preprocessor conditionals
 Added generation of helper functions with defaulted arguments
 Improved function name disambiguation to use minimal number of suffixes necessary to ensure uniqueness
+Removed constructors/destructors that involve heap allocation
